--- a/src/assets/scss/02_molecule/_career.scss
+++ b/src/assets/scss/02_molecule/_career.scss
@@ -10,12 +10,16 @@
         }
 
         a {
-            @include font-size(20px);
+            @include font-size("base");
             display: inline-block;
             font-family: $font-primary;
             text-decoration: underline;
             text-decoration-color: get-color-primary("fresh");
             transition: color 0.3s ease;
+
+            @include breakpoints("tablet") {
+                @include font-size(20px);
+            }
 
             &:hover {
                 color: get-color-primary("fresh");
