--- a/src/assets/scss/03_organism/_perk-list.scss
+++ b/src/assets/scss/03_organism/_perk-list.scss
@@ -1,9 +1,13 @@
 .o-perk-list {
-    margin: 73px 0 25px;
+    margin: 50px 0 25px;
+
+    @include breakpoints("tablet") {
+        margin-top: 73px;
+    }
 
     .m-perk {
         @include span-col(12);
-        margin-bottom: 57px;
+        margin-bottom: 30px;
 
         @include breakpoints("sm-tablet") {
             @include span-col(6);
@@ -11,19 +15,7 @@
 
         @include breakpoints("tablet") {
             @include span-col(4);
-        }
-
-        h4 {
-            @include font-size(16px);
-            @include line-height(20px);
-            margin-bottom: 10px;
-            font-weight: 600;
-            text-transform: uppercase;
-        }
-
-        p {
-            margin-block-start: 0;
-            max-width: 80%;
+            margin-bottom: 57px;
         }
     }
 }
