--- a/src/assets/scss/02_molecule/_perk.scss
+++ b/src/assets/scss/02_molecule/_perk.scss
@@ -1,3 +1,15 @@
 .m-perk {
-    
+    h4 {
+        @include font-size(20px);
+        @include line-height(26px);
+        margin-bottom: 10px;
+        color: get-color-primary("fresh-dark");
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+    p {
+        margin-block-start: 0;
+        max-width: 80%;
+    }
 }
