AWE-17: Design updates and pull request feedback

--- a/src/assets/scss/05_page/_careers.scss
+++ b/src/assets/scss/05_page/_careers.scss
@@ -48,6 +48,12 @@
         }
     }
 
+    &__perks {
+        h3 {
+            @include span-col(12);
+        }
+    }
+
     &__positions {
         position: relative;
 
