--- a/src/assets/scss/02_molecule/_perk.scss
+++ b/src/assets/scss/02_molecule/_perk.scss
@@ -4,7 +4,9 @@
         @include line-height(26px);
         margin-bottom: 10px;
         color: get-color-primary("fresh-dark");
+        font-family: $font-secondary;
         font-weight: 600;
+        letter-spacing: 0.2em;
         text-transform: uppercase;
     }
 
