--- a/src/assets/scss/02_molecule/_perk.scss
+++ b/src/assets/scss/02_molecule/_perk.scss
@@ -12,6 +12,10 @@
 
     p {
         margin-block-start: 0;
-        max-width: 80%;
+        max-width: 100%;
+
+        @include breakpoints("sm-tablet") {
+            max-width: 80%;
+        }
     }
 }
