AWE-154: Adding the case studies to the work page

--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -15,4 +15,5 @@
         "case-study-collage",
         "case-study-page-content",
         "case-study-image-swatch",
-        "perk";
+        "perk",
+        "work-item";
