Adding the client logos to the work page

--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -5,6 +5,7 @@
 @import "blog-list",
         "career-list",
         "case-study-list",
+        "client-list",
         "contact-form",
         "core-value-list",
         "hero",
