--- a/src/assets/scss/02_molecule/_work-item.scss
+++ b/src/assets/scss/02_molecule/_work-item.scss
@@ -1,8 +1,13 @@
 .m-work-item {
+    margin-bottom: 45px;
     width: 100%;
     position: relative;
     font-family: $font-primary;
     letter-spacing: normal;
+
+    @include breakpoints("tablet") {
+        margin-bottom: 0;
+    }
 
     &:not(.-inline):hover {
         opacity: 1;
@@ -20,8 +25,13 @@
 
     &.-right {
         .m-work-item__details {
-            @include push-col(0);
-            text-align: right;
+            margin-left: 30px;
+            text-align: left;
+
+            @include breakpoints("sm-tablet") {
+                margin-left: 0;
+                text-align: right;
+            }
         }
 
         .m-work-item__image {
@@ -31,6 +41,7 @@
 
     &__image {
         @include span-col(12);
+        margin-left: 0;
         position: relative;
         z-index: 1;
         overflow: hidden;
@@ -56,14 +67,14 @@
 
     &__details {
         @include span-col(12);
+        margin-left: 30px;
         position: relative;
-        margin-top: 25px;
         text-align: left;
         align-self: center;
 
         @include breakpoints("sm-tablet") {
             @include span-col(4);
-            margin-top: 0;
+            margin-left: 0;
         }
 
         h2 {
