AWE-154: Updating the verbiage

--- a/src/assets/scss/05_page/_work.scss
+++ b/src/assets/scss/05_page/_work.scss
@@ -1,3 +1,11 @@
 .p-work {
+  &__friends {
+    &__section {
+      @include span-col(12);
 
+      @include breakpoints("tablet") {
+        @include span-col(8);
+      }
+    }
+  }
 }
