--- a/src/assets/scss/05_page/_work.scss
+++ b/src/assets/scss/05_page/_work.scss
@@ -8,4 +8,14 @@
       }
     }
   }
+
+  .o-hero {
+    &__right {
+      display: none;
+
+      @include breakpoints("tablet") {
+        display: block;
+      }
+    }
+  }
 }
