AWE-154: Updates made per design feedback

--- a/src/assets/scss/05_page/_work.scss
+++ b/src/assets/scss/05_page/_work.scss
@@ -1,4 +1,11 @@
 .p-work {
+  h1 {
+    @include breakpoints("desktop") {
+      @include font-size(65px);
+      @include line-height(80px);
+    }
+  }
+
   &__friends {
     &__section {
       @include span-col(12);
