--- a/src/assets/scss/02_molecule/_work-item.scss
+++ b/src/assets/scss/02_molecule/_work-item.scss
@@ -93,6 +93,10 @@
                 @include line-height(46px);
                 margin-top: 0;
             }
+
+            @include breakpoints("lg-desktop") {
+                @include font-size(64px);
+            }
         }
 
         h3 {
