AWE-154: Updating the font size for the client list h2

--- a/src/assets/scss/05_page/_work.scss
+++ b/src/assets/scss/05_page/_work.scss
@@ -13,6 +13,12 @@
       @include breakpoints("tablet") {
         @include span-col(8);
       }
+
+      h2 {
+        @include breakpoints("lg-desktop") {
+          @include font-size(64px);
+        }
+      }
     }
   }
 
