AWE-154: More feedback from design for the h1 tag

--- a/src/assets/scss/05_page/_work.scss
+++ b/src/assets/scss/05_page/_work.scss
@@ -4,6 +4,11 @@
       @include font-size(65px);
       @include line-height(80px);
     }
+
+    @include breakpoints("lg-desktop") {
+      @include font-size(85px);
+      @include line-height(100px);
+    }
   }
 
   &__friends {
