Progress on the edio case study

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -553,6 +553,10 @@
             }
         }
 
+        &.-no-bottom-padding {
+            padding-bottom: 0;
+        }
+
         &.-no-top-padding {
             padding-top: 0;
         }
