AWE-177 new homepage initial draft

--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -3,16 +3,19 @@
 \*------------------------------------*/
 @import "blog-author",
         "blog-featured",
+        "blog-homepage-post",
         "blog-post",
         "button-row",
         "career",
         "contact-info",
         "core-value",
         "header",
+        "home-redesign-future",
         "footer",
         "fieldset",
         "case-study",
         "case-study-collage",
         "case-study-page-content",
         "case-study-image-swatch",
+        "learn-about-us",
         "perk";
