AWE-177 Add LearnAboutUs, basic styling changes

--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -10,7 +10,7 @@
         "contact-info",
         "core-value",
         "header",
-        "home-redesign-future",
+        "redesign-future",
         "footer",
         "fieldset",
         "case-study",
