--- a/src/assets/scss/02_molecule/_learn-about-us.scss
+++ b/src/assets/scss/02_molecule/_learn-about-us.scss
@@ -3,6 +3,8 @@
     flex-direction: column;
     background-color: get-color-primary("fog");
     color: get-color-primary("after-hours-light");
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 
     a {
         color: get-color-primary("after-hours");
