--- a/src/assets/scss/02_molecule/_redesign-future.scss
+++ b/src/assets/scss/02_molecule/_redesign-future.scss
@@ -1,4 +1,6 @@
-.o-learn-redesign-future__container {
+.o-redesign-future__container {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
     display: flex;
     flex-direction: column;
     background-color: get-color-primary("after-hours");
