--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -7,6 +7,7 @@
         "case-study-list",
         "contact-form",
         "core-value-list",
+        "from-our-blog",
         "hero",
         "home-animation",
         "menu",
