good styling progress - img sizing, padding, switching of flex direction

--- a/src/assets/scss/05_page/_about.scss
+++ b/src/assets/scss/05_page/_about.scss
@@ -11,4 +11,30 @@
         @include line-height("larger");
     }
   }
+
+  .no-dot {
+    padding-left: 0;
+
+    li {
+      list-style-type: none;
+    }
+  }
+
+  .p-about__illustration {
+    display: flex;
+
+    img {
+      align-self: center;
+      max-width: 84%;
+    }
+  }
+
+  .img-on-left {
+    display: flex;
+    flex-direction: row-reverse;
+
+    .extra-padding-w-img-on-left {
+      padding-left: 22px;
+    }
+  }
 }
