AWE-177 add WorkFeatured component. Make Edio featuredpost. Add trailing slashes to links for 301 issues

--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -12,5 +12,6 @@
         "home-animation",
         "menu",
         "perk-list",
-        "slider";
+        "slider",
+        "work-featured";
 
