--- a/src/assets/scss/00_base/_settings.scss
+++ b/src/assets/scss/00_base/_settings.scss
@@ -83,6 +83,7 @@ $font-sizes: (
 $line-heights: (
     "largest":      100px,
     "larger":       65px,
+    "largish":      55px,
     "large":        50px,
     "medium-large": 48px,
     "medium-small": 40px,
