--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -13,7 +13,7 @@
             }
         }
 
-        &.-careers {
+        &.-careers, &.-about {
             margin-bottom: 60px;
 
             &.-detail {
