change left and right class names to more accuarte side-one side-two names

--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -86,7 +86,9 @@
         }
 
         &__left,
-        &__right {
+        &__right,
+        &__side-one,
+        &__side-two {
             @include span-col(12);
 
             @include breakpoints("tablet") {
