--- a/src/assets/scss/02_molecule/_learn-about-us.scss
+++ b/src/assets/scss/02_molecule/_learn-about-us.scss
@@ -7,12 +7,15 @@
     padding-bottom: 5rem;
 
     a {
-        color: get-color-primary("after-hours");
         font-family: $font-primary;
-        text-decoration: underline;
-        text-decoration-color: get-color-primary("fresh");
         @include font-size("small");
         font-weight: 500;
+        letter-spacing: .2em;
+        color: get-color-primary("after-hours");
+        border-bottom-width: .2em;
+        border-color: get-color-primary("fresh");
+        text-decoration: none;
+        border-bottom-style: solid;
     }
 
     p {
