--- a/src/assets/scss/03_organism/_from-our-blog.scss
+++ b/src/assets/scss/03_organism/_from-our-blog.scss
@@ -2,30 +2,42 @@
     margin-top: 5rem;
     margin-bottom: 5rem;
 
-    a {
-        color: get-color-primary("after-hours");
-        font-family: $font-primary;
-        text-decoration: underline;
-        text-decoration-color: get-color-primary("fresh");
-    }
 
     .o-rhythm__container {
         display: flex;
         flex-direction: column;
         a.view-all-posts {
             @include font-size("small");
+            font-weight: 500;
             line-height: 28px;
+            letter-spacing: 0.2em;
+            color: get-color-primary("after-hours");
+            border-bottom-width: .2em;
+            border-color: get-color-primary("fresh");
+            text-decoration: none;
+            border-bottom-style: solid;
         }
 
         .from-our-blog {
             display: flex;
             flex-direction: row;
+            margin-bottom: 50px;
+            align-items: center;
+
+            h2 {
+                margin-right: 30px;
+            }
         }
 
         .blog-list-homepage {
             display: flex;
-            flex-direction: row;
-            justify-content: space-between;
+            flex-direction: column;
+            //justify-content: space-between;
+
+            @include breakpoints("tablet") {
+                flex-direction: row;
+                justify-content: space-between;
+            }
         }
     }
 }
