--- a/src/assets/scss/02_molecule/_learn-about-us.scss
+++ b/src/assets/scss/02_molecule/_learn-about-us.scss
@@ -1,26 +1,33 @@
-.o-learn-about-us__container {
-    display: flex;
-    flex-direction: column;
-    background-color: get-color-primary("fog");
-    color: get-color-primary("after-hours-light");
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+.o-learn-about-us {
+    &__container {
+        display: flex;
+        flex-direction: column;
+        background-color: get-color-primary("fog");
+        color: get-color-primary("after-hours-light");
+        padding-top: 5rem;
+        padding-bottom: 5rem;
 
-    a {
-        font-family: $font-primary;
-        @include font-size("small");
-        font-weight: 500;
-        letter-spacing: .2em;
-        color: get-color-primary("after-hours");
-        border-bottom-width: .2em;
-        border-color: get-color-primary("fresh");
-        text-decoration: none;
-        border-bottom-style: solid;
-    }
+        a {
+            font-family: $font-primary;
+            @include font-size("small");
+            font-weight: 500;
+            letter-spacing: .2em;
+            color: get-color-primary("after-hours");
+            border-bottom-width: .2em;
+            border-color: get-color-primary("fresh");
+            text-decoration: none;
+            border-bottom-style: solid;
+        }
 
-    p {
-        color: get-color-neutral("light-gray");
-        font-size: 36px; // todo font-size include
-        @include line-height("medium-large");
+        p {
+            color: get-color-neutral("light-gray");
+            font-size: 36px; // todo font-size include
+            @include line-height("medium-large");
+        }
+
+        .o-rhythm__container {
+            display:flex;
+            flex-wrap: nowrap;
+        }
     }
 }
