AWE-177 minor styling

--- a/src/assets/scss/00_base/_colors.scss
+++ b/src/assets/scss/00_base/_colors.scss
@@ -34,6 +34,7 @@ $colors: (
     "casestudies": (
         "careerlink": #043544,
         "cca": #3D5CC2,
+        "edio": #3D5CC2,
         "hackerone": #CA2573,
         "kidsdiscover": #0080A9,
         "pulse": #008568,
