--- a/src/assets/scss/03_organism/_work-featured.scss
+++ b/src/assets/scss/03_organism/_work-featured.scss
@@ -3,6 +3,10 @@
         padding-top: 3rem;
         padding-bottom: 3rem;
         background-color: get-color-secondary("violet");
+        background-image: url("/img/home-feature-edio-triangle.png"), url("/img/home-feature-edio-dots.png"),
+            url("/img/home-feature-edio-swabs.png");
+        background-position: top left, top right, bottom right;
+        background-repeat: no-repeat;
         color: get-color-primary("white");
 
         .featured-work-partner-name {
@@ -45,10 +49,7 @@
             width: 50%;
             float: left;
         }
-        
-        // img {
-        //     width: 50%;
-        // }
+
     }
 
     &__content {
@@ -58,7 +59,6 @@
         padding-bottom: 60px;
 
         &-inner {
-
             @include breakpoints("tablet") {
                 //padding-left: 80px;
                 //padding-right: 50px;
@@ -82,15 +82,15 @@
             color: get-color-primary("white");
             font-family: $font-primary;
             margin-right: 32px;
-            letter-spacing: .2em;
-            border-bottom-width: .2em;
+            letter-spacing: 0.2em;
+            border-bottom-width: 0.2em;
             border-color: get-color-primary("fresh");
             text-decoration: none;
             border-bottom-style: solid;
         }
 
         h2 {
-            letter-spacing: .2em;
+            letter-spacing: 0.2em;
         }
 
         .featured-work-links {
